operator/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cooking-clipper-operator
  namespace: cooking-clipper
  labels:
    app: cooking-clipper
    component: operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cooking-clipper
      component: operator
  template:
    metadata:
      labels:
        app: cooking-clipper
        component: operator
    spec:
      serviceAccountName: cooking-clipper-operator
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: operator
          image: ghcr.io/joao-zanutto/cooking-clipper-operator:21 # {"$imagepolicy": "flux-system:cooking-clipper-operator"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
