operator/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cooking-clipper-operator
  namespace: cooking-clipper
  labels:
    app: cooking-clipper
    component: operator
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      name: http
  selector:
    app: cooking-clipper
    component: operator
