operator/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cooking-clipper-operator
  namespace: cooking-clipper
  labels:
    app: cooking-clipper
    component: operator
spec:
  ingressClassName: traefik
  rules:
    - host: kube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cooking-clipper-operator
                port:
                  number: 8080
